# FactorAtlas

./: .gitignore  README.md  design.md  docker-compose.backend.yml  implementation-plan.md  repo-scaffold-plan.md  sprint-backlog.md  system-architecture.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: ai.py  analytics.py  auth.py  events.py  factors.py  graph.py  health.py  portfolios.py  scenarios.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  event_holding_relevance.py  holding.py  news_event.py  portfolio.py  portfolio_snapshot.py  price_history.py  scenario.py  user.py
backend/app/schemas/: ai.py  analytics.py  auth.py  common.py  events.py  factors.py  graph.py  portfolio.py  scenarios.py
backend/app/services/: ai_service.py  auth_service.py  event_propagation_service.py  factor_data.py  factor_service.py  graph_service.py  market_data_service.py  news_service.py  portfolio_service.py  quant_service.py  scenario_service.py  theme_data.py  theme_service.py
backend/app/utils/: cache.py  csv_parser.py  dates.py  normalization.py
backend/tests/unit/: test_csv_parser.py  test_quant.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/auth/: auth-guard.tsx
frontend/lib/api/: analytics.ts  (+8 more)
(+43 files in other folders)
